--- a/src/web/index.html
+++ b/src/web/index.html
@@ -5,13 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ti-Lantec</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script  src="js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <h1 class="txt">Lantec - Abertura de tickets:</h1>
-        <iframe id="iframe" src='http://app.pipefy.com/public/form/HVlBQCw4?embedded=true' frameborder='0'></iframe>
+        <form>
+                <div class="form-group">
+                        <label for="name">Nome:</label>
+                        <input type="text" class="form-control" id="name" placeholder="João Silva">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" placeholder="joao@gmail.com">
+                </div>
+            <div class="form-group">
+              <label for="local">Sala:</label>
+              <select class="form-control" id="local">
+                <option>Bloco A - 504</option>
+                <option>Bloco D - 201</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="subject">Assunto::</label>
+              <input type="subject" class="form-control" id="subject" placeholder="Preciso de um fone">
+          </div>
+            <div class="form-group">
+              <label for="solicitacao">Solicitação</label>
+              <textarea class="form-control" id="solicitacao" rows="3" placeholder="Meu fone atual parou de pegar"></textarea>
+            </div>
+          </form>
+          <button type="button" id='solicitar' class="btn btn-primary" onclick="teste()">Solicitar</button>
+          <button type="button" class="btn btn-danger" onclick="cancel()">Cancelar</button>
+        <!-- <iframe id="iframe" src='http://app.pipefy.com/public/form/HVlBQCw4?embedded=true' frameborder='0'></iframe> -->
     </div>
 </body>
 </html>
