remover alert and add local

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -30,7 +30,11 @@
             <div class="form-group">
               <label for="local">Sala:</label>
               <select class="form-control" id="local">
-                <option>Bloco A - 504</option>
+                <option>Bloco A - 500 - Estúdio</option>
+                <option>Bloco A - 501 - Reunião</option>
+                <option>Bloco A - 502 - Administração</option>
+                <option>Bloco A - 503 - Coordenação</option>
+                <option>Bloco A - 504 - lab</option>
                 <option>Bloco D - 201</option>
               </select>
             </div>
