--- a/src/web/index.html
+++ b/src/web/index.html
@@ -16,6 +16,25 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalTitle">Aviso</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body" id='modalBody'>
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="closeModal()">Fechar</button>
+              <!-- <button type="button" class="btn btn-primary">Ok</button> -->
+            </div>
+          </div>
+        </div>
+      </div>
     <div class="container">
         <h1 class="txt">Lantec - Abertura de tickets:</h1>
         <form>
@@ -25,6 +44,7 @@
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
+                    <h6 class='avisoSomenteGmail'>*Somente @gmail</h6>
                     <input type="email" class="form-control" id="email" placeholder="joao@gmail.com">
                 </div>
             <div class="form-group">
